--- a/avalie-tutor/src/App.css
+++ b/avalie-tutor/src/App.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Work+Sans:wght@600&display=swap");
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: content-box;
 }
 
+body {
+  background: #fff;
+  font-family: "Work Sans", sans-serif;
+}
 .container {
   display: flex;
   align-items: center;
